# hotspot

./: .gitignore  Makefile  Makefile.am  README  README.md  configure.ac
common/: Makefile.am  eprintf.c  eprintf.h  hotspot.h  sequenceData.c  sequenceData.h  stringUtil.c  stringUtil.h  tab.c  tab.h
data/mus/: exampleHotSpots.txt  exampleHotSpots19.txt  exampleResults.txt
data/test/: aso1.out  aso2.out  asp1.out  asp2.out  six.out  xov.out
doc/: hotspotDoc.tex  ref.bib  sportsDoc.tex
doc/auto/: asproDoc.el  sportsDoc.el
scripts/: test.sh
src_aso/: Makefile  Makefile.am  aso.c  complexity.c  complexity.h  data.c  data.h  data.ps  esa.c  esa.h  factor.c  factor.h  interface.c  interface.h  oligos.c  oligos.h  oligos.ps  oligos.ps~  ran.h  sacaK.c  shulen.c  shulen.h  stack.c
src_asp/: Makefile  Makefile.am  asPrimers.c  asp.c  data.c  data.h  interface.c  interface.h  primers.c  primers.h  primers.ps  univPrimers.c
src_six/: Makefile.am  interface.c  interface.h  six.c
src_xov/: Makefile.am  interface.c  interface.h  ml.c  ml.h  xov.c
